fix swap page layout on mobile devices

--- a/src/components/Global/ContentContainer/ContentContainer.module.css
+++ b/src/components/Global/ContentContainer/ContentContainer.module.css
@@ -46,6 +46,12 @@
         /* max-width: 500px; */
         width: 100%;
     }
+
+    .swap_route{
+        border: none;
+        padding: 0 8px;
+        
+    }
 }
 
 @media (min-width: 768px) {
